--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .bg1 {
-  background-image: url("images/bg.png");
+  background-image: url("https://fortuneatlas.github.io/sikiru/images/bg2.png");
   color: black;
   background-size: cover;
   width:100%;
